[gd_scene load_steps=2 format=3 uid="uid://opof5cokq7r0"]

[ext_resource type="Script" uid="uid://bw08jgyl6dhwe" path="res://scripts/ui.gd" id="1_dj8aq"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_dj8aq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -11.5
offset_right = 94.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 250

[node name="Host Game" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create Server"

[node name="Host Button" type="Button" parent="HBoxContainer/Host Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Join Game" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Join Button" type="Button" parent="HBoxContainer/Join Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Call Client Function" type="Label" parent="."]
offset_left = 334.0
offset_top = 502.0
offset_right = 483.0
offset_bottom = 525.0
text = "Call Client Function"

[node name="Client Function Button" type="Button" parent="Call Client Function"]
layout_mode = 0
offset_right = 155.0
offset_bottom = 27.0

[node name="Call Host Function" type="Label" parent="."]
offset_left = 688.0
offset_top = 491.0
offset_right = 829.0
offset_bottom = 514.0
text = "Call Host Function"

[node name="Host Function Button" type="Button" parent="Call Host Function"]
layout_mode = 0
offset_right = 146.0
offset_bottom = 26.0

[connection signal="pressed" from="HBoxContainer/Host Game/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Join Game/Join Button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Call Client Function/Client Function Button" to="." method="_on_client_function_button_pressed"]
[connection signal="pressed" from="Call Host Function/Host Function Button" to="." method="_on_host_function_button_pressed"]
